// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vuex store state prototype properties are not copied 1`] = `
Object {
  "message": "Hello!",
  "song": Object {
    "name": "The Wheel",
  },
}
`;

exports[`a map is cloned 1`] = `
Map {
  "one" => Object {
    "mutated": false,
  },
}
`;

exports[`a nested array is cloned 1`] = `
Object {
  "arr": Array [
    Object {
      "mutated": false,
    },
  ],
}
`;

exports[`an array is cloned 1`] = `
Array [
  Object {
    "mutated": false,
  },
]
`;
